Removed test wines and linked all wine functionality to search wines. Added id and country variables to wine. Created a WineBuilder class to build Wine objects.